sort.basic.cocktail.AlgCocktailSort3.scala.error
Erreur de compilation :
AlgCocktailSort3:15: error: not found: value fin
    fin -= 1
    ^AlgCocktailSort3:23: error: not found: value debut
      debut += 1
      ^